# tmp

BeerShop/: app.py  db.py  docker-compose.yml  exp.py  init.sql
BeerShop/blueprints/: basket.py
BeerShop/data/: baskets.db  secret
BeerShop/helpers/: calculate_cost.py  private_key.pem  validators.py
BeerShop/models/: Basket.py  Beer.py  User.py
BeerShop/static/: style.css
BeerShop/templates/: auth.html  baskets.html  create-basket.html  home.html  (+4 more)
PixelBank/: docker-compose.yml  hash
PunchNotes/: Dockerfile  docker-compose.yml  init.sql  main.py  server  start.sh
Storage/: Dockerfile  docker-compose.yml  init.sql
engineer_helper/: Dockerfile  calculator  compose.yml
gasoline_gallery/: .dockerignore  .env  Cargo.toml  Dockerfile  compose.yml  package-lock.json  package.json
gasoline_gallery/client/: Dockerfile  index.js  package-lock.json  package.json
gasoline_gallery/client/config/: index.js
gasoline_gallery/client/public/css/: styles.css
gasoline_gallery/client/views/: create-post.ejs  index.ejs  login.ejs  post-requests.ejs  post.ejs  register.ejs  users.ejs
gasoline_gallery/migrations/: up.sql
gasoline_gallery/src/: error.rs  lib.rs  main.rs  schema.rs
gasoline_gallery/src/config/: config.rs
gasoline_gallery/src/controllers/: auth.rs  post.rs  user.rs
gasoline_gallery/src/middlewares/: auth.rs
gasoline_gallery/src/models/: comment.rs  mod.rs  post.rs  post_access.rs  user.rs
gasoline_gallery/src/pkg/: db.rs  jwt.rs
gasoline_gallery/src/utils/: utils.rs
poetica/: docker-compose.yml
projectoil/: app.py  docker-compose.yml
(+179 files in other folders)
