[package]
name = "gasoline-gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono", "r2d2"] }
actix-web = "4.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
lazy_static = "1.5.0"
diesel_migrations = "2.1.0"
jsonwebtoken = "9.3.0"
rand = "0.8"
sha2 = "0.10"
hex = "0.4.3"
futures-util = "0.3"
uuid = { version = "1.11.0", features = ["v4"]}
chrono = { version = "0.4", features = ["serde"] }
diesel-derive-enum ={ version = "2.1.0", features = ["postgres"] }
actix-multipart = "0.7.2"
base64 = "0.22.1"
mime_guess = "2.0.5"